agregada la seccion de reportes

--- a/app/common/views/saa.html
+++ b/app/common/views/saa.html
@@ -37,6 +37,13 @@
 		                        <b class='caret'></b>
 		                    </a>
 		                    <tree tree='administracion'></tree>
+						</li>
+						<li uib-dropdown>
+		                    <a uib-dropdown-toggle>
+		                        Reportes
+		                        <b class='caret'></b>
+		                    </a>
+		                    <tree tree='reportes'></tree>
 		                </li>
 		            </ul>
 		            <ul class="nav navbar-nav navbar-right" class="list-group">
