agregado input de archivo en reportes implementado con custom directive fileread

--- a/app/reportes/views/reportes.html
+++ b/app/reportes/views/reportes.html
@@ -1,4 +1,3 @@
-<div>    
-    <input type="button" value="file-name">
-    <input type="file">
+<div>        
+    <input type="file" fileread="fileread">
 </div>
