Terminado el modulo de poblar la base de datos

--- a/app/common/views/saa.html
+++ b/app/common/views/saa.html
@@ -40,7 +40,7 @@
 						</li>
 						<li uib-dropdown>
 		                    <a uib-dropdown-toggle>
-		                        Reportes
+		                        Base de datos
 		                        <b class='caret'></b>
 		                    </a>
 		                    <tree tree='reportes'></tree>
