--- a/app/reportes/views/reportes.html
+++ b/app/reportes/views/reportes.html
@@ -1,3 +1,4 @@
-<div>    
-    <input type="file" fileread="fileread">
+<div style="text-align: center">    
+    <input type="file" fileread="fileread" >    
+        <h1>{{progreso}}</h1>
 </div>
